2007-06-22  Mark Grondona <mgrondona@llnl.gov>

	* pdsh.spec : Redesign of specfile conditionals to allow
	  easier modification of defaults.

	* : tag pdsh-2.14.

2007-06-20  Mark Grondona <mgrondona@llnl.gov>

	* src/modules/slurm.c : Include SLURM headers after all pdsh
	  includes to avoid redefinition of bool type.

	* configure.ac, config/ac_exec.m4, pdsh.spec, 
	  src/modules/Makefile.am, config/Makefile.am :
	  Allow conditional and static build of "exec" module.

	* : Re-run ./bootstrap.
	  
	* src/pdsh/mod.c : Don't exclude filename member of module 
	  struct when building static modules. Fix for compile error.

	* src/modules/execcmd.c : Fix for static module build.

	* config/ac_exec.m4, configure : Enable "exec" rcmd module
	  by default.

2007-06-07  Mark Grondona <mgrondona@llnl.gov>

	* : tag pdsh-2.13.

2007-06-06  Mark Grondona <mgrondona@llnl.gov>

	* src/pdsh/wcoll.c : 
	  Ignore blank and comment lines in WCOLL file instead of
	  generating warning.

	* src/pdsh/rcmd.c :
	  Add "exec" rcmd method to list of default rcmd modules.

	* scripts/dshbak : 
	  Attempt to compress ranges of hosts when numerically
	  named hosts have non-numeric suffixes.

2007-06-04  Mark Grondona <mgrondona@llnl.gov>

	* src/common/pipecmd.c, src/common/pipecmd.h :
	  Add new "pipecmd" API for executing arbitrary commands.

	* src/modules/execcmd.c : 
	  Add new "exec" rcmd module which uses pipecmd to execute
	  arbitrary process in place of rcmd connect method. First
	  pdsh "remote" arg is the command to execute, followed
	  by any arguments. "%h", "%u", and "%n" are expanded to
	  the target host, remote username, and rank [0-N] respectively.

	* src/pdsh/opt.h, src/pdsh/opt.c :
	  Save remote argv array for later possible use. This is more
	  useful for the 'exec' rcmd module that the opt->cmd string,
	  because it preserves the shell's argument parsing. Functions
	  for grabbing the remote argv and argc were added to opt.h.
